trust score controller change, cleaning
